--- a/packages/ui/src/Modal.module.scss
+++ b/packages/ui/src/Modal.module.scss
@@ -8,6 +8,7 @@
   background-color: transparentize(c.$colorNeutralLight, 0.9);
 }
 
+// TODO: focus
 .modal {
   background-color: c.$colorNeutralWhite;
   border: none;
@@ -32,6 +33,8 @@
     padding: 0 c.$grid * 6;
     // TODO: Get color
     border-bottom: c.$borderWidth solid c.$colorNeutralLight;
+
+    @include c.typographyBodyNormal('bold');
   }
 
   .footer {
@@ -43,5 +46,10 @@
     padding: 0 c.$grid * 6;
     // TODO: Get color
     border-top: c.$borderWidth solid c.$colorNeutralLight;
+
+    // There are <0; 2> buttons, assert the margin only if there are 2
+    & > button:nth-of-type(2) {
+      margin-left: c.$grid * 3;
+    }
   }
 }
