Add .kind prop to Link.
Closes #97

--- a/packages/ui/src/Link.module.scss
+++ b/packages/ui/src/Link.module.scss
@@ -4,7 +4,6 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  color: c.$colorPrimary;
   text-decoration: none;
 
   &:hover,
@@ -15,6 +14,13 @@
   &.active {
     text-decoration: underline solid;
     outline: none;
+  }
+
+  &.primary {
+    color: c.$colorPrimary;
+  }
+  &.secondary {
+    color: c.$colorTextSecondary;
   }
 }
 
