--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -33,3 +33,11 @@ $tooltipMaxWidth: 550px !default;
 $buttonMaxWidth: 370px !default;
 
 $toastMaxWidth: 580px !default;
+
+$inputHeight: $grid * 10 !default;
+
+$cardShadowSize: 1px !default;
+$cardShadowBlur: 4px !default;
+
+$selectMenuShadowSize: 1px !default;
+$selectMenuShadowBlur: 4px !default;
