--- a/packages/ui/src/Modal.module.scss
+++ b/packages/ui/src/Modal.module.scss
@@ -24,6 +24,32 @@
   // TODO: Get color
   box-shadow: 5px 20px 80px 0 #353d49;
 
+  .outline {
+    position: absolute;
+    border-radius: c.$borderRadius;
+    pointer-events: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: c.$zIndex100;
+    visibility: hidden;
+
+    @include h.outlineSimple;
+  }
+
+  &:focus,
+  &.focus {
+    // Do not remove outline for high-contrast modes
+    // https://stackoverflow.com/a/52616313
+    outline: transparent solid c.$outlineWidth;
+
+    .outline {
+      visibility: visible;
+    }
+  }
+
   .header {
     height: c.$grid * 14;
     display: flex;
