--- a/packages/ui/src/Table/Header.module.scss
+++ b/packages/ui/src/Table/Header.module.scss
@@ -41,7 +41,9 @@
     top: 0;
     z-index: 1;
     // Prevents from scrolling while dragging on touch devices
+    /* doiuse-disable css-touch-action */
     touch-action: none;
+    /* doiuse-enable css-touch-action */
 
     &.isResizing {
       background: red;
