Slider's value indicator hides if value is present in the marks

--- a/packages/ui/src/Slider.module.scss
+++ b/packages/ui/src/Slider.module.scss
@@ -62,6 +62,11 @@ ul.markDescriptions {
     position: absolute;
     bottom: c.$grid;
     transform: translateX(-50%);
+
+    &.activeMarkDescription {
+      font-weight: c.$fontWeightTextBold;
+      color: black;
+    }
   }
 }
 
