--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -6,6 +6,10 @@
   align-items: center;
 }
 
+.sliderSmallThumb::-webkit-slider-thumb {
+  // this should never be possible to override, this is only for storybook purpose - visual regression testing
+  opacity: 0.5 !important;
+}
 .typographyBodySmall {
   @include c.typographyBodySmall;
 }
