--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -41,3 +41,14 @@ $cardShadowBlur: 4px !default;
 
 $selectMenuShadowSize: 1px !default;
 $selectMenuShadowBlur: 4px !default;
+
+// border radius on left/right size of the progress tracker
+$sliderTrackBorderRadius: $grid * 2;
+// height of the track
+$slideTrackHeight: $grid * 2;
+$sliderThumbBorderSize: $grid * 1.5; // in rem
+$sliderThumbHoverBorderSize: 1px;
+
+$sliderThumbShadowSize: 1px;
+$sliderThumbShadowBlur: $grid;
+$sliderFillBorderSize: 1px;
