--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -1,7 +1,12 @@
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
+a.button {
+  text-decoration: none;
+}
+
 .button {
+  display: inline-block;
   position: relative;
   box-sizing: border-box;
   cursor: pointer;
