--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -1,10 +1,6 @@
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
-a.button {
-  text-decoration: none;
-}
-
 .button {
   display: inline-block;
   position: relative;
@@ -15,6 +11,8 @@ a.button {
   border-radius: c.$borderRadius;
   height: c.$grid * 10;
   max-width: c.$buttonMaxWidth;
+  // for <a> element
+  text-decoration: none;
 
   @include c.typographyButton;
 
