Button/Link with a/button semantics (#123)
* Concept: Button with a semantics

* Link prototype

* Update packages/ui/src/Button.tsx

Co-authored-by: danad02 <polansky.dan@gmail.com>

* Smaller changes to button/a semantics

* Button & Link component prop - added tests & stories

* Link & Button semantics - screenshots + docs

* Remove memoisation from Link/Button

Co-authored-by: danad02 <polansky.dan@gmail.com>

--- a/packages/ui/src/Link.module.scss
+++ b/packages/ui/src/Link.module.scss
@@ -5,6 +5,9 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  border: none;
+  background: none;
+  cursor: pointer;
 
   &:hover,
   &.hover,
@@ -13,7 +16,7 @@
   &:active,
   &.active {
     text-decoration: underline solid;
-    outline: none;
+    outline: transparent solid c.$outlineWidth;
   }
 
   &.primary {
