--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -2,6 +2,7 @@
 @use '../styles/helpers' as h;
 
 .button {
+  display: inline-block;
   position: relative;
   box-sizing: border-box;
   cursor: pointer;
@@ -10,6 +11,8 @@
   border-radius: c.$borderRadius;
   height: c.$grid * 10;
   max-width: c.$buttonMaxWidth;
+  // for <a> element
+  text-decoration: none;
 
   @include c.typographyButton;
 
