smoother animation for toggle's label.

--- a/packages/ui/src/Toggle.module.scss
+++ b/packages/ui/src/Toggle.module.scss
@@ -10,8 +10,17 @@ $knob-bg-on: c.$colorNeutralWhite;
 $knob-bg-off: c.$colorNeutralLighter;
 $label-margin: 12px;
 
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .wrapper {
-  // hide the actual input
+  // hide the actual input, we will show the toggle-track instead.
   input[type='checkbox'] {
     display: none;
   }
@@ -71,6 +80,7 @@ $label-margin: 12px;
     right: 8px;
     font-size: 0.9rem;
     color: #fff;
+    animation: fadein 0.2s;
   }
 
   // global disabled state
