feat: make Pagination rows per page select inline

--- a/packages/ui/src/TextArea.module.scss
+++ b/packages/ui/src/TextArea.module.scss
@@ -38,6 +38,7 @@
   }
 
   .textAreaContainer {
+    margin-top: c.$grid;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
