--- a/packages/ui/src/Pagination.module.scss
+++ b/packages/ui/src/Pagination.module.scss
@@ -63,7 +63,6 @@
     }
   }
 
-  // Comfortable to use with up to 4-digit numbers
   .pageJump {
     display: flex;
     align-items: center;
@@ -74,13 +73,25 @@
 
     .input {
       margin-top: 0;
+      // Comfortable to use with up to 4-digit numbers and small enough to not take much space
       max-width: c.$grid * 30;
       min-width: c.$grid * 30;
     }
   }
 
   .rowsPerPage {
-    max-width: c.$grid * 30;
-    min-width: c.$grid * 30;
+    display: flex;
+    align-items: center;
+
+    .label {
+      margin-right: c.$grid * 2.5;
+    }
+
+    :global .hz-select-field__control {
+      margin-top: 0;
+      // Comfortable to use with up to 3-digit numbers and small enough to not take much space
+      max-width: c.$grid * 25;
+      min-width: c.$grid * 25;
+    }
   }
 }
