--- a/packages/ui/src/Notification.module.scss
+++ b/packages/ui/src/Notification.module.scss
@@ -2,7 +2,7 @@
 
 .notification {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   padding: c.$grid * 2 c.$grid * 3;
   border-radius: c.$borderRadiusNotification;
 
@@ -14,11 +14,21 @@
   }
 
   .content {
+    display: flex;
     flex: 1 1 auto;
+    align-items: center;
+    /*
+     * Note:
+     * The (min)height is equal to corresponding icon height. Necessary due to 'flex-start' alignment and
+     * specific alignment differences between single-line and multi-line text content.
+     */
+    min-height: c.$grid * 6;
   }
 
   .link {
-    // TODO: Improvisation. Get real spacing.
+    // Note: The (min)height is equal to corresponding icon height. Necessary due to 'flex-start' alignment.
+    min-height: c.$grid * 6;
+    // TODO: Improvisation. Consult with @pawel.
     margin-left: c.$grid * 2;
   }
 
