feat: add tests

--- a/packages/ui/src/Notification.module.scss
+++ b/packages/ui/src/Notification.module.scss
@@ -32,7 +32,7 @@
     margin-left: c.$grid * 2;
   }
 
-  /* Themes */
+  /* Theme - success */
   &.success {
     color: c.$colorNeutralWhite;
     background-color: c.$colorSuccess;
@@ -46,6 +46,7 @@
     }
   }
 
+  /* Theme - info */
   &.info {
     color: c.$colorText;
     background-color: c.$colorInfoLight;
@@ -59,6 +60,7 @@
     }
   }
 
+  /* Theme - warning */
   &.warning {
     color: c.$colorText;
     background-color: c.$colorWarningLight;
@@ -72,6 +74,7 @@
     }
   }
 
+  /* Theme - error */
   &.error {
     color: c.$colorNeutralWhite;
     background-color: c.$colorError;
