--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -22,6 +22,7 @@ $borderWidthButton: 2px !default;
 $outlineWidth: 2px !default;
 
 $iconStrokeWidth: 2px !default;
+$iconStrokeWidthBold: 3px !default;
 
 $iconSizeSmall: $grid * 4 !default;
 $iconSizeNormal: $grid * 6 !default;
