--- a/packages/ui/src/Toggle.module.scss
+++ b/packages/ui/src/Toggle.module.scss
@@ -3,14 +3,13 @@
 
 $h: c.$grid * 6;
 $w: c.$grid * 15;
-$labelMargin: c.$grid * 4;
+$labelMargin: c.$grid * 2.5;
 $trackBr: 22px;
-$trackBgOn: #1dbc22;
+$trackBgOn: c.$colorSuccessLight;
 $trackBgOff: c.$colorNeutralLight;
-$knobRight: $w * 0.6;
 $knobBgOn: c.$colorNeutralWhite;
 $knobBgOff: c.$colorNeutralLighter;
-$knobR: $h * 0.9;
+$knobRadius: c.$grid * 5;
 $knobOffset: c.$grid * 0.3;
 $knobFontSize: c.$grid * 3.5;
 
@@ -30,7 +29,7 @@ $knobFontSize: c.$grid * 3.5;
 @mixin focusState {
   @include h.outlineFormField;
 
-  // override box-shadow decl from the mixin above to delete the inset
+  // override box-shadow decl from the mixin above to remove the inset
   box-shadow: 0 0 0 (c.$outlineWidth - c.$borderWidth) c.$colorAccessibilityOutline;
 }
 
@@ -84,6 +83,10 @@ $knobFontSize: c.$grid * 3.5;
     color: c.$colorNeutralWhite;
     border-color: c.$colorNeutralLight;
     cursor: not-allowed;
+    &:focus {
+      // undo focus effect when disabled
+      box-shadow: none;
+    }
   }
 
   .error .toggleTrack {
@@ -101,37 +104,38 @@ $knobFontSize: c.$grid * 3.5;
   .toggleTrack:before {
     content: '';
     display: inline-block;
-    height: calc(#{$knobR} - 2px);
-    width: calc(#{$knobR} - 1px);
+    height: $knobRadius;
+    width: $knobRadius;
     background: $knobBgOff;
     border-radius: 50%;
     position: absolute;
-    top: calc(#{$knobOffset} + 0px);
-    right: calc(#{$knobOffset} + 0px);
+    top: $knobOffset;
+    right: $knobOffset;
     transition: right c.$transitionTimeMedium ease-in;
   }
 
   // knob ON state
   input[type='checkbox']:checked + label .toggleTrack:before {
     background: $knobBgOn;
-    right: $knobRight;
+    right: $w - $knobRadius - (3 * $knobOffset);
   }
 
   // the "OFF" text
   input[type='checkbox'] + label .toggleTrack:after {
     content: 'OFF';
     position: absolute;
-    top: 1px;
-    left: 6px;
+    top: 50%; // center vertically by translate trick.
+    transform: translateY(-50%);
+    left: c.$grid * 1.5;
     font-size: $knobFontSize;
-    color: #fff;
+    color: c.$colorNeutralWhite;
     animation: fadein c.$transitionTimeMedium;
   }
 
   // the "ON" text
   input[type='checkbox']:checked + label .toggleTrack:after {
     content: 'ON';
-    right: 8px;
+    right: c.$grid * 2;
     left: unset;
   }
 }
